fixed layout issues
 The following issues were fixed
1) the spacer div was removed. Another div containing just the hero image was added
2)in navbar2 the position of toggler button and the brand was readjusted.A bit of opacity added to brand

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -26,11 +26,17 @@ $lanzini-gold: #bf9456;
     transform:scale(60%)
   }
 }
+#navigation {
+  position:absolute;
+  top:0;
+  left:0;
+}
 #hero{
   filter:brightness(70%);
+  display: block;
+  padding:0;
+  margin:0;
   object-fit:cover;
-  position:absolute!important;
-  z-index:-1!important
 }
 
 .fb-icon{
